<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlbumActivity" >

 <RelativeLayout
        android:id="@+id/headview"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/x45"
        android:background="@drawable/plugin_camera_title_bar"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/x3"
        >
        <Button
            android:layout_width="@dimen/x60"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#fff"
            android:id="@+id/back"
            android:text="@string/album"
            android:background="@drawable/plugin_camera_title_btn_back"
            android:layout_marginTop="@dimen/x5"
            android:layout_marginBottom="@dimen/x5"
            android:layout_centerVertical="true"
            />
        <Button
            android:layout_width="@dimen/x67" 
      	    android:layout_height="wrap_content"
        	android:textSize="14sp"
        	android:textColor="#fff"
        	android:id="@+id/cancel"
        	android:text="@string/camera_cancel"
        	android:background="@drawable/plugin_camera_title_btn_cancel"
      	    android:layout_centerVertical="true"
      	    android:layout_marginRight="@dimen/x5"
            android:layout_alignParentRight="true" 
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x50"
        android:layout_alignParentBottom="true"
        android:background="@drawable/plugin_camera_bottom_bar"
        android:layout_marginTop="@dimen/x3"
        >
 		<Button
            android:id="@+id/preview"
            android:layout_width="@dimen/x90"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x10"
            android:text="@string/preview"            
            android:background="@drawable/plugin_camera_title_btn_preview"
            />
        <Button
            android:id="@+id/ok_button"
            android:layout_width="@dimen/x90"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/x10"
            android:background="@drawable/plugin_camera_ok_btn_state"
            />
    </RelativeLayout>

    <GridView
        android:id="@+id/myGrid"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom_layout"
        android:layout_below="@id/headview"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/x2"
        android:horizontalSpacing="@dimen/x10"
        android:numColumns="4"
        android:verticalSpacing="@dimen/x10"
        android:background="@color/albumback" />
    <TextView
        android:id="@+id/myText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_photo" 
        android:textColor="@color/black"
        />
</RelativeLayout>
